<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="tipo_de_sangre">Tipo de sangre</string>
    <string name="fecha_simple">Fecha : </string>
    <string name="actualizar">Actualizar</string>
    <string name="grupo">Grupo</string>
    <string name="B_POSITIVO_TIPODESANGRE">B+</string>
    <string name="email_invalid">Dirección de correo invalido</string>
    <string name="se_registro_corrctamente">Se registro correctamente</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="agregar_alumno">Agregar estudiante</string>
    <string name="alguienmas">Alguien mas lo recogerá</string>
    <string name="ingresar_con_fb">Ingresar con Facebook</string>
    <string name="invalid_mail">Correo invalido</string>
    <string name="falta_foto">Hace falta una fotografía para registrarse</string>
    <string name="falta_foto_alumno">Hace falta una fotografía para agregar alumno</string>
    <string name="A_POSITIVO_TIPODESANGRE">A+</string>
    <string name="telefono">Teléfono</string>
    <string name="cerrar_sersion">Cerrar sesión</string>
    <string name="nombre_simple">Nombre:</string>
    <string name="codigo">Código</string>
    <string name="buscar_estudiante">Ingrese el código del estudiante que va a buscar</string>
    <string name="pass">Contraseña</string>
    <string name="O_NEGATIVO_TIPODESANGRE">-O</string>
    <string name="facebook_app_id">327469640948977</string>
    <string name="profesor">Profesor</string>
    <string name="tipo_de_usuario">Tipo de usuario</string>
    <string name="edad">Edad</string>
    <string name="registrar_con_fb">Registrarse con Facebook</string>
    <string name="telefono_simple">Télefono: </string>
    <string name="madre">Madre</string>
    <string name="fecha">dd/MM/YYYY)</string>
    <string name="tv_name">Nombre</string>
    <string name="buscar">Buscar</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="en_camino">En camino</string>
    <string name="telefono_invalido">Teléfono inválido\n(Faltan o sobran carácteres)</string>
    <string name="campo_vacio">Campo vacio</string>
    <string name="entrar">Entrar</string>
    <string name="AB_POSITIVO_TIPODESANGRE">AB+</string>
    <string name="nombre">Nombre completo</string>
    <string name="persona_check_out">Nombre</string>
    <string name="tv_tipo">Tipo</string>
    <string name="passtwo">Confirmar contraseña</string>
    <string name="padre">Padre</string>
    <string name="O_POSITIVO_TIPODESANGRE">O+</string>
    <string name="grupo_simple">Grupo :</string>
    <string name="A_NEGATIVO_TIPODESANGRE">-A</string>
    <string name="tipo_de_sangre_simple">Tipo de sangre:</string>
    <string name="camposvacios">Campos vacios</string>
    <string name="checkout">Check out</string>
    <string name="email">Email</string>
    <string name="estado_de_salida_del_niño">El estado de la salida del niño es :</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="nombre_de_la_persona_que_recoge">Nombre de la persona que va a realizar el checkout</string>
    <string name="estudiante_no_encontrado">Estudiante no encontrado</string>
    <string name="B_NEGATIVO_TIPODESANGRE">-B</string>
    <string name="AB_NEGATIVO_TIPODESANGRE">-AB</string>
    <string name="retardo">Voy retrasado</string>
    <string name="app_name">Proyecto IPN</string>
    <string name="problemas">Ocurrio un problema</string>
    <string name="edad_simple">Edad:</string>
    <string name="contraseña_pequeña">Contraseña demasiado corta</string>
    <string name="alumno_encontrado">Alumno encontrado</string>
    <string name="ya_va_en_camino">Ya van en camino a la escuela</string>
    <string name="etsa_retrasado">Se tiene un contratiempo</string>
    <string name="alguien_mas_recogera">Alguien mas recogerá a </string>
    <string name="se_retiro_de_la_escuela"> se retiro de la escuela con</string>
    <string name="personaquerecoge">Ingrese nombre de persona que esta realizando checkout</string>
    <string name="enviar">Enviar</string>
    <string name="nombre_de_la_persona_que_ira">¿Quién irá por </string>
    <string name="importante_decir_quien">Es importante especificar quien ira por el alumno</string>
    <string name="se_le_aviso_al_profesor_que_alguien_mas_ira">Se le aviso al profesor que alguien mas recogerá a su hij@</string>
    <string name="se_le_aviso_al_profesor_que_va_tarde">Se le aviso al profesor que llegará tarde</string>
    <string name="se_le_aviso_al_profesor_que_va_en_camino">Se le aviso al profesor que ya va en camino</string>
    <string name="serealizoelcheckout">Se realizo el checkout</string>
    <string name="sin_definir">Estudiante sin registros</string>
</resources>