<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:elevation="16dp"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:layout_height="match_parent"
        android:background="@drawable/my_btn_background_ripple">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
            android:id="@+id/cimv_estudiante_perfil"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="70"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/myt_item_tv_style"
            android:text="@string/nombre_simple"
            android:id="@+id/tv_nombre" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/myt_item_tv_style"
            android:text="@string/edad_simple"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_edad" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/myt_item_tv_style"
            android:layout_marginTop="5dp"
            android:text="@string/fecha_de_nacimiento"
            android:id="@+id/tv_fecha_de_nacimiento" />


    </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>