<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activitys.RegisterActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_photo_register"
        android:layout_width="@dimen/dimen_120dp"
        android:layout_height="@dimen/dimen_120dp"
        android:layout_gravity="center"
        android:clickable="true"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="1dp"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_nombre_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/nombre" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_telefono_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="18sp"
            android:maxLength="12"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/telefono" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_mail_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/pass" />

    </android.support.design.widget.TextInputLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/tipo_de_usuario"
        android:elevation="16dp"
        app:ms_background_color="@color/colorPrimary"
        app:ms_arrow_tint="@color/colorAccent"
        app:ms_text_color="@color/colorAccent" />

    <Button
        android:id="@+id/btn_crearcuenta_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@drawable/my_btn_background_ripple"
        android:textColor="@color/white"
        android:text="@string/crearcuenta" />
    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
        android:id="@+id/dot_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:visibility="gone"
        android:layout_marginRight="@dimen/dimen_20dp"
        custom:amount="5"
        custom:duration="@android:integer/config_mediumAnimTime"
        custom:endColor="@color/colorPrimary"
        custom:startColor="@color/colorPrimaryDark"/>

</LinearLayout>